k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment
spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api

          image: python:3.12-alpine

          command:
            - sh
            - -c
            - |
              [...]
          ports:
            - containerPort: 8000
