k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment

spec:
  replicas: 5

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"

          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html

          ports:
            - containerPort: 80

      volumes:
        - name: nginx-storage

          persistentVolumeClaim:
            claimName: nginx-pvc
