k8s/test-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: test-nginx

spec:
  containers:
    - name: nginx
      image: nginx:1.27
