k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

  annotations:
    cert-manager-io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik

  tls:
    - hosts:
      - app.k8s.local

      secretName: app-tls

  rules:
    - host: app.k8s.local

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: api-service

                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx-service

                port:
                  number: 80
